--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  font-family: "Jost", sans-serif;
+}
+
 body {
   background-color: gray;
 }
@@ -8,16 +12,44 @@ nav {
   background-color: black;
 }
 
-.sideBar {
+.side-bar {
   width: 20%;
-  height: 100vw;
+  height: 100%;
   background-color: #59a395;
   position: fixed;
   z-index: 1;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-around; */
 }
 
-.sideBarOptions {
+.side-bar-name {
+  text-align: center;
+  padding: 1rem 0;
+  font-size: 1.25rem;
+  padding-top: 2rem;
+}
+
+.side-bar-name h2 {
+  font-weight: 500;
+}
+
+.side-bar-options-sub {
+  display: flex;
+  justify-content: center;
+  height: 60%;
+  align-items: center;
+}
+
+.side-bar-options {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-items: flex-start;
+  padding-top: 5rem;
+}
+
+.side-bar-options ul li {
+  padding: 1rem 0;
+  font-size: 1.25rem;
 }
