--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html {
   font-family: "Jost", sans-serif;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -10,6 +12,14 @@ nav {
   width: 100%;
   height: 5vw;
   background-color: black;
+  position: fixed;
+  z-index: 3;
+  opacity: 0.6;
+}
+
+main {
+  width: 100%;
+  display: block;
 }
 
 .side-bar {
@@ -18,20 +28,22 @@ nav {
   background-color: #59a395;
   position: fixed;
   z-index: 1;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-around; */
 }
 
 .side-bar-name {
   text-align: center;
   padding: 1rem 0;
   font-size: 1.25rem;
-  padding-top: 2rem;
+  padding-top: 5rem;
+  line-height: 1.4;
 }
 
 .side-bar-name h2 {
-  font-weight: 500;
+  font-weight: 700;
+}
+
+.side-bar-name h3 {
+  font-weight: 400;
 }
 
 .side-bar-options-sub {
@@ -52,4 +64,113 @@ nav {
 .side-bar-options ul li {
   padding: 1rem 0;
   font-size: 1.25rem;
+}
+
+.side-bar-options ul li:hover {
+  animation: blabla 0.6s ease-out;
+  opacity: 0.5;
+  /* transform: translateX(); */
+}
+
+@keyframes blabla {
+  0% {
+    transform: translateX(0);
+  }
+  33% {
+    transform: translateX(5px);
+  }
+  66% {
+    transform: translatex(-2px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.links {
+  width: 100%;
+  height: 20vw;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+}
+
+.links-sub {
+  width: 30px;
+}
+
+.links-sub a {
+  /* display: inline-block; */
+  /* align-items: flex-end; */
+  width: 40%;
+}
+
+.links-sub img {
+  width: 30px;
+  height: 30px;
+}
+
+.github,
+.instagram {
+  transition: 0.5s ease-out;
+}
+
+/* .github:hover,
+.instagram:hover {
+  rotate: 1turn;
+  animation: rotate 3s linear;
+} */
+
+.github img:hover,
+.instagram img:hover {
+  animation: github 0.5s ease-in-out;
+}
+
+/* .github img:hover {
+  width: 40px;
+  height: 40px;
+} */
+
+@keyframes github {
+  0% {
+    width: 30px;
+    height: 30px;
+    /* transform: rotate(0deg); */
+  }
+  33% {
+    width: 35px;
+    height: 35px;
+    transform: rotate(0.05turn);
+  }
+  66% {
+    width: 35px;
+    height: 35px;
+    transform: rotate(-0.05turn);
+  }
+  100% {
+    width: 30px;
+    height: 30px;
+    transform: rotate(0turn);
+  }
+}
+
+.main {
+  height: 3000px;
+}
+
+.site-header-content {
+  height: 60vw;
+  width: 80%;
+  background-color: white;
+  float: right;
+  text-align: center;
+}
+
+.site-header-content img {
+  width: 40%;
+  /* height: 30%; */
+  display: block;
+  margin: 0 auto;
+  margin-top: 7rem;
+  border-radius: 50%;
 }
