--- a/style.css
+++ b/style.css
@@ -23,11 +23,14 @@ main {
 }
 
 .side-bar {
-  width: 20%;
+  width: 15%;
   height: 100%;
   background-color: #59a395;
   position: fixed;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .side-bar-name {
@@ -47,10 +50,10 @@ main {
 }
 
 .side-bar-options-sub {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   height: 60%;
-  align-items: center;
+  align-items: center; */
 }
 
 .side-bar-options {
@@ -67,12 +70,11 @@ main {
 }
 
 .side-bar-options ul li:hover {
-  animation: blabla 0.6s ease-out;
+  animation: rightLeft 0.6s ease-out;
   opacity: 0.5;
-  /* transform: translateX(); */
 }
 
-@keyframes blabla {
+@keyframes rightLeft {
   0% {
     transform: translateX(0);
   }
@@ -93,6 +95,7 @@ main {
   display: flex;
   align-items: flex-end;
   justify-content: space-evenly;
+  margin-bottom: 2rem;
 }
 
 .links-sub {
@@ -100,8 +103,6 @@ main {
 }
 
 .links-sub a {
-  /* display: inline-block; */
-  /* align-items: flex-end; */
   width: 40%;
 }
 
@@ -115,21 +116,10 @@ main {
   transition: 0.5s ease-out;
 }
 
-/* .github:hover,
-.instagram:hover {
-  rotate: 1turn;
-  animation: rotate 3s linear;
-} */
-
 .github img:hover,
 .instagram img:hover {
   animation: github 0.5s ease-in-out;
 }
-
-/* .github img:hover {
-  width: 40px;
-  height: 40px;
-} */
 
 @keyframes github {
   0% {
@@ -160,17 +150,35 @@ main {
 
 .site-header-content {
   height: 60vw;
-  width: 80%;
+  width: 85%;
   background-color: white;
   float: right;
   text-align: center;
 }
 
 .site-header-content img {
-  width: 40%;
+  width: 300px;
   /* height: 30%; */
   display: block;
   margin: 0 auto;
   margin-top: 7rem;
   border-radius: 50%;
+}
+
+.site-header-text-section {
+  margin: 0 auto;
+  width: 60%;
+  padding-top: 3rem;
+  text-align: justify;
+}
+
+.site-header-text-section h2 {
+  font-size: 1.75rem;
+  font-weight: 500;
+  text-align: center;
+}
+
+.site-header-text-section p {
+  font-size: 1.375rem;
+  padding-top: 1rem;
 }
