--- a/style.css
+++ b/style.css
@@ -144,12 +144,14 @@ main {
   }
 }
 
+/* Main Top Section  */
+
 .main {
   height: 3000px;
 }
 
 .site-header-content {
-  height: 60vw;
+  /* height: 60vw; */
   width: 85%;
   background-color: white;
   float: right;
@@ -167,7 +169,7 @@ main {
 
 .site-header-text-section {
   margin: 0 auto;
-  width: 60%;
+  width: 70%;
   padding-top: 3rem;
   text-align: justify;
 }
@@ -181,4 +183,48 @@ main {
 .site-header-text-section p {
   font-size: 1.375rem;
   padding-top: 1rem;
+}
+
+.description-options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.description-options h3 {
+  font-weight: 300;
+  text-align: center;
+}
+
+.radio-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  column-gap: 50px;
+  margin-top: 8px;
+}
+
+.radio-btn-each {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+
+.bio-length-words {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.bio-length-words p {
+  padding-top: 0;
+}
+
+#demo {
+  margin-bottom: 20px;
+}
+
+.about-me {
+  padding-bottom: 20px;
 }
