--- a/style.css
+++ b/style.css
@@ -169,7 +169,6 @@ main {
 
 .site-header-text-section {
   margin: 0 auto;
-  width: 70%;
   padding-top: 3rem;
   text-align: justify;
 }
@@ -189,12 +188,21 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-top: 30px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .description-options h3 {
-  font-weight: 300;
+  font-weight: 400;
   text-align: center;
+  margin-top: 30px;
+}
+
+.btn-section {
+  width: 35%;
+  margin: 0 auto;
 }
 
 .radio-buttons {
@@ -227,4 +235,6 @@ main {
 
 .about-me {
   padding-bottom: 20px;
+  width: 80%;
+  margin: 0 auto;
 }
