--- a/style.css
+++ b/style.css
@@ -144,9 +144,9 @@ main {
 /* Main Top Section  */
 
 .main {
-  height: 3000px;
   width: 85%;
   float: right;
+  /* min-height: 100vh; */
 }
 
 .main-home {
@@ -155,14 +155,59 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vw;
+  /* min-height: 100vh; */
+  /* height: 1000px; */
 }
 
 .dark-background {
-  background-color: black;
-  opacity: 0.4;
+  position: relative;
   width: 100%;
-  height: 100vw;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  min-height: 100vh;
+}
+
+.dark-background::before {
+  content: "";
+  background-color: black;
+  opacity: 0.5;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.welcome {
+  position: relative;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.welcome p:first-child {
+  padding-bottom: 1.25rem;
+  font-size: 2.25rem;
+}
+
+.welcome p:last-child {
+  padding-top: 1rem;
+  font-size: 1.25rem;
+}
+
+.typing-effect {
+  height: 60px;
+  font-size: 3.75rem;
+}
+
+.welcome span {
+  height: 3.5rem;
+  font-size: 3.5rem;
 }
 
 .site-about-content {
@@ -171,7 +216,8 @@ main {
 }
 
 .side-bar-img img {
-  width: 90%;
+  width: 80%;
+  opacity: 0.8;
   display: block;
   margin: 0 auto;
   border-radius: 50%;
